smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-after-shape.smithy
// Parse error at line 6, column 1 near `use`: A use statement must come before any shape or trait definition
namespace smithy.example

string MyString

use trait smithy.api#String
